testdata/baselines/reference/submodule/conformance/typeFromPropertyAssignment7.errors.txt
a.js(2,5): error TS2339: Property 'method' does not exist on type '{}'.
a.js(5,13): error TS2339: Property 'method' does not exist on type '{}'.


==== a.js (2 errors) ====
    var obj = {};
    obj.method = function (hunch) {
        ~~~~~~
!!! error TS2339: Property 'method' does not exist on type '{}'.
        return true;
    }
    var b = obj.method();
                ~~~~~~
!!! error TS2339: Property 'method' does not exist on type '{}'.
    